=======================================================================
                  SIESTA CHANGES: TOP IS MOST RECENT
=======================================================================


** CHANGES ALONG trunk

-----------------------------------------------------------------------
2011-09-12  09:15:00 GMT Alberto Garcia <albertog@icmab.es>   trunk-386
Fix fdf_defined to take blocks into account

The new version of fdf_defined was only checking
for the existence of single labels. It has been
fixed to check for blocks too.

modified:
  Src/fdf/fdf.F90
  Src/fdf/sample.F90

-----------------------------------------------------------------------
2011-08-30  09:50:00 GMT Alberto Garcia <albertog@icmab.es>   trunk-385
Fix two minor bugs in Denchar

Some compilers had trouble with a block pointer. It has
been made into a normal variable.

An attempt was made to close an I/O unit that had not
ben opened in the spin-unpolarized case.

(Thanks to T. Sondon)

modified:
  Util/Denchar/Src/atompla.f
  Util/Denchar/Src/rhoofr.f

-----------------------------------------------------------------------
2011-08-26  12:40:00 GMT Alberto Garcia <albertog@icmab.es>   trunk-384
Print information about grid distributions

New code has been added to show information about
the different grid data distributions.

modified:
  Src/moremeshsubs.F

-----------------------------------------------------------------------
2011-05-19  15:20:00 GMT Alberto Garcia <albertog@icmab.es>   trunk-383
Fix and clarify code for KB projector orthogonalization

In routine kbproj, a saved variable was used to keep track
of the number of previous KB projectors with the same l. This
variable was only reset upon a change in l. This can lead
to errors if a species with a single l=0 KB complex is used.

The code has been streamlined, passing explicitly an index
that determines the sequence number of the projector.

modified:
  Src/atom.f
